# mock_lib

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: integration_test.sh
src/mock_lib/: __init__.py  greet.py
tests/: test_greet.py
